--- a/forpost/lodash_debounce/s4-av-client-side/1-basic.html
+++ b/forpost/lodash_debounce/s4-av-client-side/1-basic.html
@@ -7,16 +7,26 @@
         <script>
 var canvas = document.getElementById('the_canvas'),
 ctx = canvas.getContext('2d'),
-x = 0;
+x = 0,
+lt = new Date(),
+fps = 24;
+
 var loop = function(){
+    var now = new Date(),
+    secs = (now - lt) / 1000;
+    // using requestAnimationFrame in place of setTimeout or lodash debounce
     requestAnimationFrame(loop);
-    // update x
-    x += 10; x %= canvas.width + 128;
-    // draw to the canvas
-    ctx.fillStyle = 'black';
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-    ctx.fillStyle = 'white';
-    ctx.fillRect(x - 128, 240 - 64, 128, 128);
+    if(secs > 1 / fps){
+        // update x
+        x += 256 * secs;
+        x %= canvas.width + 128;
+        // draw to the canvas
+        ctx.fillStyle = 'black';
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
+        ctx.fillStyle = 'white';
+        ctx.fillRect(Math.round(x - 128), 240 - 64, 128, 128);
+        lt = now;
+    }
 };
 loop();
         </script>
